# VoiceSkip

./: .gitattributes  .gitignore  BENCHMARKS  CHANGELOG  PRIVACY_POLICY.md  README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml
app/: .gitignore  build.gradle  download_vvl.gradle  proguard-rules.pro
app/src/androidTest/assets/: test_clear_8s.opus  test_long_273s.opus
app/src/androidTest/java/com/voiceskip/domain/usecase/: FormatSentencesUseCaseTest.kt
app/src/androidTest/java/com/voiceskip/jni/: WhisperBenchmark.kt  WhisperJniIntegrationTest.kt  WhisperTestUtils.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/voiceskip/: MainActivity.kt  StartupConfig.kt  VoiceSkipApplication.kt
app/src/main/java/com/voiceskip/data/: ErrorHandler.kt  UserPreferences.kt  VoiceSkipException.kt
app/src/main/java/com/voiceskip/data/repository/: AudioPlaybackRepository.kt  AudioPlaybackRepositoryImpl.kt  SavedTranscription.kt  SavedTranscriptionRepository.kt  SettingsRepository.kt  SettingsRepositoryImpl.kt  TranscriptionRepository.kt  TranscriptionRepositoryImpl.kt  TranscriptionState.kt
app/src/main/java/com/voiceskip/data/source/: SavedTranscriptionDataSource.kt  WhisperDataSource.kt  WhisperDataSourceImpl.kt
app/src/main/java/com/voiceskip/di/: AppModule.kt  DataModule.kt  DispatcherQualifiers.kt  DispatchersModule.kt
app/src/main/java/com/voiceskip/domain/: ModelManager.kt
app/src/main/java/com/voiceskip/domain/usecase/: AudioListenUseCase.kt  FileTranscriptionUseCase.kt  FormatSentencesUseCase.kt  LiveTranscriptionUseCase.kt
app/src/main/java/com/voiceskip/media/: FileAudioProvider.kt  LiveAudioProvider.kt
app/src/main/java/com/voiceskip/service/: ServiceLauncher.kt  TranscriptionService.kt
app/src/main/java/com/voiceskip/ui/main/: AudioPlaybackManager.kt  FileManager.kt  MainScreen.kt  MainScreenViewModel.kt
app/src/main/java/com/voiceskip/ui/settings/: AboutSection.kt  SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/voiceskip/ui/theme/: Color.kt  Dimensions.kt  Theme.kt  Type.kt
app/src/main/java/com/voiceskip/util/: AppLifecycleTracker.kt  AudioConstants.kt  IntentExtensions.kt  VoiceSkipLogger.kt  WakeLockManager.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/voiceskip/: TestDispatcherRule.kt
app/src/test/java/com/voiceskip/data/: ErrorHandlerTest.kt
app/src/test/java/com/voiceskip/data/repository/: AudioPlaybackRepositoryTest.kt  SavedTranscriptionRepositoryImplTest.kt  TranscriptionRepositoryImplTest.kt
app/src/test/java/com/voiceskip/domain/: ModelManagerTest.kt
app/src/test/java/com/voiceskip/fake/: FakeSavedTranscriptionRepository.kt  FakeSettingsRepository.kt  FakeTranscriptionRepository.kt  FakeWhisperDataSource.kt
app/src/test/java/com/voiceskip/ui/main/: AudioPlaybackManagerTest.kt  MainScreenViewModelTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle  consumer-rules.pro
lib/src/main/java/com/voiceskip/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
lib/src/main/jni/: CMakeLists.txt  Makefile  jni.c  stream.c  stream.h  stream_test.c  whisper.patches
models_pack/: build.gradle
resources/: export_icons.sh
